book/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book
  template:
    metadata:
      labels:
        app: book
    spec:
      containers:
        - name: book
          image: backendd/mizotakhteh.book:1-cicd
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 0m
              memory: 0Mi
